fixed frontend